crates/umbral-macros/tests/task_macro_fixtures/two_params.stderr
error: #[task] requires exactly one parameter (the typed payload); found 2 parameter(s)
 --> tests/task_macro_fixtures/two_params.rs:5:21
  |
5 | async fn two_params(a: Payload, b: String) -> Result<(), String> {
  |                     ^^^^^^^^^^^^^^^^^^^^^
